@@ -1,3 +1,5 @@
+package org.apache.lucene.util;
+
 /*
  * Licensed to the Apache Software Foundation (ASF) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
@@ -15,10 +17,9 @@
  * limitations under the License.
  */
 
-package org.apache.lucene.util;
-
 import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
+import java.text.ParseException;
 import java.util.Locale;
 import java.util.Random;
 
@@ -48,7 +49,7 @@ public class TestVersion extends LuceneTestCase {
     assertEquals("4.0.0.2", Version.LUCENE_4_0_0.toString());
   }
 
-  public void testParseLeniently() {
+  public void testParseLeniently() throws Exception {
     assertEquals(Version.LUCENE_4_9_0, Version.parseLeniently("LUCENE_49"));
     assertEquals(Version.LUCENE_4_9_0, Version.parseLeniently("LUCENE_4_9"));
     assertEquals(Version.LUCENE_4_9_0, Version.parseLeniently("LUCENE_4_9_0"));
@@ -72,20 +73,30 @@ public class TestVersion extends LuceneTestCase {
     try {
       Version.parseLeniently("LUCENE");
       fail();
-    } catch (IllegalArgumentException iae) {
+    } catch (ParseException pe) {
       // pass
+      assertTrue(pe.getMessage().contains("LUCENE"));
     }
     try {
       Version.parseLeniently("LUCENE_410");
       fail();
-    } catch (IllegalArgumentException iae) {
+    } catch (ParseException pe) {
       // pass
+      assertTrue(pe.getMessage().contains("LUCENE_410"));
     }
     try {
       Version.parseLeniently("LUCENE41");
       fail();
-    } catch (IllegalArgumentException iae) {
+    } catch (ParseException pe) {
       // pass
+      assertTrue(pe.getMessage().contains("LUCENE41"));
+    }
+    try {
+      Version.parseLeniently("LUCENE_6.0.0");
+      fail();
+    } catch (ParseException pe) {
+      // pass
+      assertTrue(pe.getMessage().contains("LUCENE_6.0.0"));
     }
   }
 
@@ -103,16 +114,20 @@ public class TestVersion extends LuceneTestCase {
     assertTrue(atLeastOne);
   }
 
-  public void testParse() {
+  public void testParse() throws Exception {
     assertEquals(Version.LUCENE_5_0_0, Version.parse("5.0.0"));
     assertEquals(Version.LUCENE_4_1_0, Version.parse("4.1"));
     assertEquals(Version.LUCENE_4_1_0, Version.parse("4.1.0"));
     assertEquals(Version.LUCENE_4_0_0_ALPHA, Version.parse("4.0.0"));
     assertEquals(Version.LUCENE_4_0_0_BETA, Version.parse("4.0.0.1"));
     assertEquals(Version.LUCENE_4_0_0, Version.parse("4.0.0.2"));
+    
+    // Version does not pass judgement on the major version:
+    assertEquals(1, Version.parse("1.0").major);
+    assertEquals(6, Version.parse("6.0.0").major);
   }
 
-  public void testForwardsCompatibility() {
+  public void testForwardsCompatibility() throws Exception {
     assertTrue(Version.parse("4.7.10").onOrAfter(Version.LUCENE_4_7_2));
     assertTrue(Version.parse("4.20.0").onOrAfter(Version.LUCENE_4_8_1));
     assertTrue(Version.parse("5.10.20").onOrAfter(Version.LUCENE_5_0_0));
@@ -120,80 +135,99 @@ public class TestVersion extends LuceneTestCase {
 
   public void testParseExceptions() {
     try {
-      Version.parse("1.0");
-      fail();
-    } catch (IllegalArgumentException iae) {
-      // pass
-    }
-
-    try {
       Version.parse("LUCENE_4_0_0");
       fail();
-    } catch (IllegalArgumentException iae) {
+    } catch (ParseException pe) {
       // pass
+      assertTrue(pe.getMessage().contains("LUCENE_4_0_0"));
     }
 
     try {
       Version.parse("4.256");
       fail();
-    } catch (IllegalArgumentException iae) {
+    } catch (ParseException pe) {
       // pass
+      assertTrue(pe.getMessage().contains("4.256"));
     }
 
     try {
       Version.parse("4.-1");
       fail();
-    } catch (IllegalArgumentException iae) {
+    } catch (ParseException pe) {
       // pass
+      assertTrue(pe.getMessage().contains("4.-1"));
     }
 
     try {
       Version.parse("4.1.256");
       fail();
-    } catch (IllegalArgumentException iae) {
+    } catch (ParseException pe) {
       // pass
+      assertTrue(pe.getMessage().contains("4.1.256"));
     }
 
     try {
       Version.parse("4.1.-1");
       fail();
-    } catch (IllegalArgumentException iae) {
+    } catch (ParseException pe) {
       // pass
+      assertTrue(pe.getMessage().contains("4.1.-1"));
     }
 
     try {
       Version.parse("4.1.1.3");
       fail();
-    } catch (IllegalArgumentException iae) {
+    } catch (ParseException pe) {
       // pass
+      assertTrue(pe.getMessage().contains("4.1.1.3"));
     }
 
     try {
       Version.parse("4.1.1.-1");
       fail();
-    } catch (IllegalArgumentException iae) {
+    } catch (ParseException pe) {
       // pass
+      assertTrue(pe.getMessage().contains("4.1.1.-1"));
     }
 
     try {
       Version.parse("4.1.1.1");
       fail();
-    } catch (IllegalArgumentException iae) {
+    } catch (ParseException pe) {
       // pass
+      assertTrue(pe.getMessage().contains("4.1.1.1"));
     }
 
     try {
       Version.parse("4.1.1.2");
       fail();
-    } catch (IllegalArgumentException iae) {
+    } catch (ParseException pe) {
       // pass
+      assertTrue(pe.getMessage().contains("4.1.1.2"));
     }
 
     try {
       Version.parse("4.0.0.0");
       fail();
-    } catch (IllegalArgumentException iae) {
+    } catch (ParseException pe) {
       // pass
+      assertTrue(pe.getMessage().contains("4.0.0.0"));
+    }
+
+    try {
+      Version.parse("4.0.0.1.42");
+      fail();
+    } catch (ParseException pe) {
+      // pass
+      assertTrue(pe.getMessage().contains("4.0.0.1.42"));
+    }
+
+    try {
+      Version.parse("4..0.1");
+      fail();
+    } catch (ParseException pe) {
+      // pass
+      assertTrue(pe.getMessage().contains("4..0.1"));
     }
   }
   
@@ -224,7 +258,7 @@ public class TestVersion extends LuceneTestCase {
         Version.LATEST.toString(), commonBuildVersion);
   }
 
-  public void testEqualsHashCode() {
+  public void testEqualsHashCode() throws Exception {
     Random random = random();
     String version = "" + (4 + random.nextInt(1)) + "."  + random.nextInt(10) + "." + random.nextInt(10);
     Version v1 = Version.parseLeniently(version);
